--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- Logo -->
             <div class="flex-shrink-0">
               <a href="#">
-                <img src="/images/BHOOME LOGO.png" alt="BHOOMI AUTOMOBILE" class="h-12 w-auto">
+                <img src="/images/logo.jpg" alt="BHOOMI AUTOMOBILE" class="h-20 w-auto">
               </a>
             </div>
 
