--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
             <!-- Logo -->
             <div class="flex-shrink-0">
               <a href="#">
-                <img src="/images/logo.jpg" alt="BHOOMI AUTOMOBILE" class="h-20 w-auto">
+                <img src="/images/logo.jpg" alt="BHOOMI AUTOMOBILE" class="h-22 w-auto">
               </a>
             </div>
 
             <!-- Navigation Links -->
             <nav class="hidden md:flex space-x-8">
-              <a href="#" class="text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-md font-medium">Home</a>
-              <a href="#" class="text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-md font-medium">About
+              <a href="#" class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">Home</a>
+              <a href="#" class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">About
                 Us</a>
               <a href="#"
-                class="text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-md font-medium">Vehicles</a>
-              <a href="#" class="text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-md font-medium">Gallery</a>
+                class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">Vehicles</a>
+              <a href="#" class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">Gallery</a>
               <a href="#"
                 class="bg-blue-600 text-white hover:bg-blue-700 px-4 py-2 rounded-md text-md font-medium transition-colors">Contact
                 Us</a>
