phone number and gmail changed

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
           <div class="flex space-x-6">
             <span class="flex items-center gap-2">
-              📞 +91 8821894829
+              📞 +91 9193363030
             </span>
             <span class="flex items-center gap-2">
-              ✉️ bhoomejunction@gmail.com
+              ✉️ bhoomidriveelectric@gmail.com
             </span>
           </div>
           <div>
