--- a/index.html
+++ b/index.html
@@ -755,7 +755,8 @@
             <div class="space-y-4 text-sm">
               <p class="flex items-start gap-3">
                 <span class="text-blue-500 text-lg">📍</span>
-                <span>Khasra No. 283, Pillar No. 1071,<br>Delhi Meerut Road, Sikri Kalan,<br>Modinagar-201204.</span>
+                <span>Bhoomi Automobiles factory head office<br>Om Sai ITI Near Gas Godam <br>Village- Sarakdi Sekh
+                  <br>Janta Road Saharanpur 247001</span>
               </p>
               <p class="flex items-center gap-3">
                 <span class="text-blue-500 text-lg">✉️</span>
