address and number changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
           <div class="flex space-x-6">
             <span class="flex items-center gap-2">
-              📞 +91 9193363030
+              📞 +91 9548230824
             </span>
             <span class="flex items-center gap-2">
               ✉️ bhoomidriveelectric@gmail.com
@@ -760,12 +760,12 @@
               </p>
               <p class="flex items-center gap-3">
                 <span class="text-blue-500 text-lg">✉️</span>
-                <a href="mailto:info@bhoomeautomobiles.in"
-                  class="hover:text-blue-400 transition-colors">info@bhoomeautomobiles.in</a>
+                <a href="mailto:bhoomidriveelectric@gmail.com"
+                  class="hover:text-blue-400 transition-colors">bhoomidriveelectric@gmail.com</a>
               </p>
               <p class="flex items-center gap-3">
                 <span class="text-blue-500 text-lg">📞</span>
-                <span class="text-white font-bold tracking-wide">8958288580</span>
+                <span class="text-white font-bold tracking-wide">9548230824</span>
               </p>
             </div>
           </div>
