--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             <div class="space-y-4 text-sm">
               <p class="flex items-start gap-3">
                 <span class="text-blue-500 text-lg">📍</span>
-                <span>Bhoomi Automobiles factory head quater office<br>Om Sai ITI Near Gas Godam <br>Sarakdi Sekh
+                <span>Bhoomi Automobiles factory head quarter office<br>Om Sai ITI Near Gas Godam <br>Sarakdi Sekh
                   <br>Janta Road Saharanpur 247001</span>
               </p>
               <p class="flex items-center gap-3">
