--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bhoomi Automobile</title>
+  <link rel="icon" type="image/png" href="images/bhoomi-favicon-rounded.png">
 </head>
 
 <body>
