about section details change

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                 Welcome to Bhoomi Automobiles</h2>
               <p class="text-lg text-gray-300 leading-relaxed">
                 Bhoomi Automobiles is a leading Electric Scooty Manufacturer in India, committed to innovation,
-                sustainability, and high-performance EV solutions. Established in 2024 by Mr. Sagar Chaudhary with a
+                sustainability, and high-performance EV solutions. Established in 2019 by Rakam Singh Rana with a
                 capital
-                of over ₹10 crore, we specialize in manufacturing electric scooters using both lead-acid and lithium
+                of over ₹100 crore, we specialize in manufacturing electric scooters using both lead-acid and lithium
                 battery
                 technology.
               </p>
