--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 
             <!-- Navigation Links -->
             <nav class="hidden md:flex space-x-8">
-              <a href="index.html"
+              <a href="home.html"
                 class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">Home</a>
               <a href="about.html"
                 class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">About
