--- a/vehicles.html
+++ b/vehicles.html
@@ -38,14 +38,14 @@
           <div class="flex justify-between items-center h-20">
             <!-- Logo -->
             <div class="flex-shrink-0">
-              <a href="index.html">
+              <a href="home.html">
                 <img src="/images/Bhoomi logo.png" alt="BHOOMI AUTOMOBILE" class="h-28 w-auto">
               </a>
             </div>
 
             <!-- Navigation Links -->
             <nav class="hidden md:flex space-x-8">
-              <a href="index.html"
+              <a href="home.html"
                 class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">Home</a>
               <a href="about.html"
                 class="text-gray-700 hover:text-blue-900 px-3 py-2 rounded-md text-md font-medium">About Us</a>
