section name changed

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
               </h2>
               <p class="text-lg text-gray-400 leading-relaxed">
                 Bhoomi Automobiles is a leading Electric Scooty Manufacturer in India, committed to innovation,
-                sustainability, and high-performance EV solutions. Established in 2020 by Mr. Sagar Chaudhary,
+                sustainability, and high-performance EV solutions. Established in 2019 by Mr. Rakam singh Rana,
                 we specialize in manufacturing electric scooters using both lead-acid and lithium battery
                 technology, setting new benchmarks in the industry.
               </p>
