--- a/home.html
+++ b/home.html
@@ -115,9 +115,8 @@
                 Welcome to Bhoomi Automobiles</h2>
               <p class="text-lg text-gray-300 leading-relaxed">
                 Bhoomi Automobiles is a leading Electric Scooty Manufacturer in India, committed to innovation,
-                sustainability, and high-performance EV solutions. Established in 2021 by Mr. Rakam Singh Rana with a
-                capital
-                of over ₹100 crore, we specialize in manufacturing electric scooters using both lead-acid and lithium
+                sustainability, and high-performance EV solutions. Established in 2021 by Mr. Rakam Singh Rana, we
+                specialize in manufacturing electric scooters using both lead-acid and lithium
                 battery
                 technology.
               </p>
