--- a/home.html
+++ b/home.html
@@ -116,9 +116,9 @@
               <p class="text-lg text-gray-300 leading-relaxed">
                 Bhoomi Automobiles is a leading Electric Scooty Manufacturer in India, committed to innovation,
                 sustainability, and high-performance EV solutions. Established in 2021 by Mr. Rakam Singh Rana, we
-                specialize in manufacturing electric scooters using both lead-acid and lithium
-                battery
+                specialize in manufacturing electric scooters using both lead-acid and lithium battery
                 technology.
+
               </p>
             </div>
 
